--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Apple</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
-    <!-- <link rel="stylesheet" href="reset.css"> buat reset css -->
+    <!-- <link rel="stylesheet" href="reset.css">reset css -->
     <link rel="shortcut icon" type="image/jpg" href="./img/apple-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
         crossorigin="anonymous" />
